# hermes-memory-proxy

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONCEPTS.md  CONTRIBUTING.md  DECISIONS.md  DEPLOY.md  Dockerfile  FOR_AGENT.md  LICENSE  PROGRESS.md  README.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-smoke.yml
config/: settings.py
docs/: AUDIT-2026-07-13-mini-training.md
examples/: .env.example  hermes-config.yaml  hermes-cron-loops.sh  memory-proxy.service
hermes-plugin/memory-proxy/: __init__.py  plugin.yaml
hermes-skill/memory-proxy/: SKILL.md
identity/TEMPLATE/: SOUL.md  USER.md
migrations/: 002_loops.sql
scripts/: backup.sh  backup_to_github.sh  bootstrap_db.sh  ci_mock_upstream.py  dedupe_memories.py  memory-proxy.service  merge_to_single_user.py  sync_public.sh  wait_for_db.sh
src/memory_proxy/api/: main.py  security.py
src/memory_proxy/config/: settings.py
src/memory_proxy/context/: assembler.py  budgeter.py
src/memory_proxy/identity/: loader.py
src/memory_proxy/knowledge/: embedding.py  ingest.py  repository.py
src/memory_proxy/memory/: conversation_repo.py  llm_extractor.py  repository.py  writer.py
src/memory_proxy/pipeline/: orchestrator.py
src/memory_proxy/providers/: anthropic_adapter.py  base.py  (+3 more)
tests/: test_context.py  test_credentials.py  test_e2e.py  test_ingest.py  test_llm_extractor.py  test_memory_writer.py  test_metrics.py  test_ollama.py  test_passthrough.py  test_phase2.py  test_provider_factory.py  test_retrieval.py  test_security.py  test_user_id.py
(+4 files in other folders)
